<resources>
    <string name="app_name">Ticky To Do</string>
    <string name="about">I know you’ve got many things to do but I’m here to help you organize</string>
    <string name="get_started">Get started</string>
    <string name="hey_i_m_ticky">Hey I\'m Ticky!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="july_2022">July, 2022</string>
    <string name="add_some_tasks">Add some tasks,</string>
    <string name="don_t_make_me_bored">don\'t make me bored</string>
    <string name="new_task">New task</string>
    <string name="back">Back</string>
    <string name="stuff_to_do">Stuff to do?</string>
    <string name="type_your_task_here">Type your task here</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="m">M</string>
    <string name="_4">4</string>
    <string name="t">T</string>
    <string name="_5">5</string>
    <string name="w">W</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="f">F</string>
    <string name="_8">8</string>
    <string name="s">S</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="to_do">To do</string>
    <string name="sort_by">sort by</string>
    <string name="completed">Completed</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="circle">circle</string>
    <string name="xOnDate">xOnDate</string>
    <string name="due_25_aug">Due 25 Aug.</string>
</resources>