<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnboardFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/bitmap_cat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="229dp"
        android:layout_height="208dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/bitmap" />

    <View
        android:id="@+id/white_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bitmap_cat"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:background="@color/white_full" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_title"
        app:layout_constraintEnd_toEndOf="@id/white_view"
        app:layout_constraintStart_toStartOf="@id/white_view"
        app:layout_constraintTop_toTopOf="@id/white_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/hey_i_m_ticky"
        android:textColor="@color/dark_text"
        android:textSize="28sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_about"
        app:layout_constraintEnd_toEndOf="@id/white_view"
        app:layout_constraintStart_toStartOf="@id/white_view"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center"
        android:paddingStart="70dp"
        android:paddingEnd="70dp"
        android:text="@string/about"
        android:textColor="@color/dark_text"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/get_started_btn"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_about"
        android:layout_width="155dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/dark_text"
        android:fontFamily="@font/ubuntu_regular"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textSize="14sp" />

</androidx.constraintlayout.widget.ConstraintLayout>