<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    tools:context=".fragments.AddTaskFragment"
    tools:ignore="ExtraText">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/arrAndCalendarIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/backArrConstraint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/goBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arr"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/textBack"
                app:layout_constraintBottom_toBottomOf="@id/textBack"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textBack"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/ubuntu_medium"
                android:textColor="@color/dark_color"
                android:text="@string/back"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/goBack"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calendar"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/date_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
        <TextView
            android:id="@+id/choseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Due 25 Aug."
            app:layout_constraintEnd_toEndOf="@id/x_On_Date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/dark_color"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/x_On_Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_x"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/stuff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stuff_to_do"
        android:fontFamily="@font/ubuntu_medium"
        android:textSize="16sp"
        android:textColor="@color/dark_color"
        app:layout_constraintTop_toBottomOf="@id/arrAndCalendarIcon"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="60dp"
        android:layout_marginStart="28dp"/>

    <EditText
        android:id="@+id/editTextTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:inputType="text"
        android:autofillHints="name"
        android:hint="@string/type_your_task_here"
        android:fontFamily="@font/ubuntu_bold"
        android:background="@null"
        app:layout_constraintTop_toBottomOf="@id/stuff"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/circles_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTask"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/red_circle_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_red_oval"
                android:layout_gravity="center"/>
            <View
                android:id="@+id/red_circle_border"
                android:visibility="invisible"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:background="@drawable/ic_oval"
                android:layout_gravity="center"/>


        </FrameLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/orange_circle_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_orange_oval"
                android:layout_gravity="center"/>
            <View
                android:id="@+id/orange_circle_border"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:visibility="invisible"
                android:background="@drawable/ic_oval_for_orange"
                android:layout_gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/yellow_circle_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_yellow_oval"
                android:layout_gravity="center"/>
            <View
                android:id="@+id/yellow_circle_border"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:visibility="invisible"
                android:background="@drawable/ic_oval_for_yellow"
                android:layout_gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/green_circle_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_green_oval"
            android:layout_gravity="center"/>
        <View
            android:id="@+id/green_circle_border"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:visibility="invisible"
            android:background="@drawable/ic_oval_for_green"
            android:layout_gravity="center"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/blue_circle_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_blue_oval"
                android:layout_gravity="center"/>
        <View
            android:id="@+id/blue_circle_border"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:visibility="invisible"
            android:background="@drawable/ic_oval_for_blue"
            android:layout_gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/dark_blue_circle_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_dark_blue_oval"
                android:layout_gravity="center"/>
            <View
                android:id="@+id/dark_blue_circle_border"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:visibility="visible"
                android:background="@drawable/ic_oval_for_dark_blue"
                android:layout_gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/purple_circle_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_purple_oval"
                android:layout_gravity="center"/>
            <View
                android:id="@+id/purple_circle_border"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:visibility="invisible"
                android:background="@drawable/ic_oval_for_purple"
                android:layout_gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/light_purple_circle_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_light_purple_oval"
                android:layout_gravity="center"/>
            <View
                android:id="@+id/light_purple_circle_border"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:visibility="invisible"
                android:background="@drawable/ic_oval_for_light_purple"
                android:layout_gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/pink_circle_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_pink_oval"
                android:layout_gravity="center"/>
            <View
                android:id="@+id/pink_circle_border"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:visibility="invisible"
                android:background="@drawable/ic_oval_for_pink"
                android:layout_gravity="center"/>
        </FrameLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <FrameLayout
        android:id="@+id/cancel_container"
        android:layout_width="70dp"
        android:layout_height="35dp"
        app:layout_constraintEnd_toStartOf="@id/save_btn"
        app:layout_constraintTop_toTopOf="@id/save_btn"
        app:layout_constraintBottom_toBottomOf="@id/save_btn"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"

        >
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/x_as_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:background="@drawable/ic_x"
            android:layout_gravity="left|center"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:text="Cancel"
            android:textSize="16sp"

            />
    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_btn"
        android:layout_width="160dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/circles_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/save"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:cornerRadius="15dp"
        android:backgroundTint="@color/dark_color"/>



</androidx.constraintlayout.widget.ConstraintLayout>